Update ca-certificates in tools/tasks/main.yaml

--- a/setup/roles/tools/tasks/main.yaml
+++ b/setup/roles/tools/tasks/main.yaml
@@ -1,8 +1,10 @@
 ---
 - name: install
   apt:
-    name: 
+    name:
       - jq
       - tmux
       - unzip
+      - ca-certificates
+    state: latest
     update_cache: yes
