Fix some pathing issues with AWS
* `aws-ssh.sh` script had wrong paths in Chapters 8 and 12
* Use `inventory_dir` to find private key for AWS instances as it works
  everywhere
* Also fix deprecated use of `include`

Fixes #9

--- a/setup/roles/aws-instances/defaults/main.yaml
+++ b/setup/roles/aws-instances/defaults/main.yaml
@@ -9,3 +9,4 @@ aws_ubuntu_owner: "099720109477"
 aws_ubuntu_image: "ubuntu/images/hvm-ssd/ubuntu-focal-20.04-amd64-server-20210223"
 aws_k8s_teardown: false
 aws_k8s_delete: false
+aws_k8s_ssh_dir: "../sshkeys"
