--- a/setup/roles/aws-instances/tasks/main.yaml
+++ b/setup/roles/aws-instances/tasks/main.yaml
@@ -1,9 +1,9 @@
 ---
-- include: setup.yaml
+- ansible.builtin.include_tasks: setup.yaml
   when: not aws_k8s_teardown
 
-- include: teardown.yaml
+- ansible.builtin.include_tasks: teardown.yaml
   when: aws_k8s_teardown
 
-- include: delete.yaml
+- ansible.builtin.include_tasks: delete.yaml
   when: aws_k8s_teardown and aws_k8s_delete
