--- a/setup/roles/k8s/tasks/install.yaml
+++ b/setup/roles/k8s/tasks/install.yaml
@@ -104,7 +104,7 @@
 
 - name: download calico operator
   ansible.builtin.get_url:
-    url: https://docs.projectcalico.org/archive/v{{ calico_version }}/manifests/tigera-operator.yaml
+    url: https://projectcalico.docs.tigera.io/archive/v{{ calico_version }}/manifests/tigera-operator.yaml
     dest: /etc/kubernetes/components/tigera-operator.yaml
     mode: '0644'
   when: 
