--- a/setup/roles/test/tasks/main.yaml
+++ b/setup/roles/test/tasks/main.yaml
@@ -1,10 +1,15 @@
 ---
+- name: install retry
+  ansible.builtin.apt:
+    name:
+    - retry
+    update_cache: yes
+
 - name: install node
   ansible.builtin.apt:
     name:
     - nodejs
     - npm
-    update_cache: yes
 
 - name: install bats
   ansible.builtin.shell: >
