add postgresteams crd and update postgres-operator to v1.11.0

--- a/setup/roles/k8s/tasks/install.yaml
+++ b/setup/roles/k8s/tasks/install.yaml
@@ -223,6 +223,7 @@
   register: result
   until: result is successful
   loop:
+    - postgresteams.yaml
     - operatorconfiguration.crd.yaml
     - postgresql-operator-default-configuration.yaml
     - operator-service-account-rbac.yaml
