--- a/setup/roles/k8s/tasks/prep.yaml
+++ b/setup/roles/k8s/tasks/prep.yaml
@@ -116,6 +116,7 @@
     - k8s_initial_master in ansible_facts['all_ipv4_addresses']
     - k8s_postgresql_operator != "none"
   loop:
+    - postgresteams.yaml
     - operatorconfiguration.crd.yaml
     - postgresql-operator-default-configuration.yaml
     - operator-service-account-rbac.yaml
